<resources>
    <string name="app_name">వివిఐటి బాలోత్సవ్</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="photo_gallery">ఫొటో గ్యాలరీ</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="wrong_password">సరియినది కాని పాస్వర్డ్</string>
    <string name="check_connection">కనెక్షన్ను తనిఖీ చేయండి</string>
    <string name="enter_all_fields">అన్నింటినీ ఎంటర్ చేయండి</string>
    <string name="otp_sent">OTP పంపబడింది</string>
    <string name="school_code_is_already_taken">పాఠశాల కోడ్ ఇప్పటికే తీసుకోబడింది</string>
    <string name="incorrect_otp">OTP ని సరిచూసుకోండి </string>
    <string name="click_here_to_fill_Accomodation_form">వసతి కొరకు ఈ పత్రము నింపడానికి ఇక్కడ క్లిక్ చేయండి </string>
    <string name="School_code">పాఠశాల కోడ్</string>
    <string name="password">పాస్వర్డ్</string>
    <string name="login">లాగిన్</string>
    <string name="new_user_register_here">కొత్త యూజర్ రిజిస్ట్రేషన్</string>
    <string name="school_type">పాఠశాల రకం</string>
    <string name="head_master_name">ప్రేధానోపాధ్యాయుని పేరు </string>
    <string name="head_master_email">ప్రేధానోపాధ్యాయుని ఇమెయిల్ </string>
    <string name="head_master_phno">ప్రేధానోపాధ్యాయుని ఫోన్ నెంబర్ </string>
    <string name="coordinator_name">టీమ్ పర్యవేక్షకుల పేరు </string>
    <string name="coordinator_phno">టీమ్ పర్యవేక్షకుల ఫోన్ నెంబర్ </string>
    <string name="town">పట్టణం/గ్రామం</string>
    <string name="district">జిల్లా</string>
    <string name="state">రాష్ట్రము </string>
    <string name="pincode">పిన్ కోడ్</string>
    <string name="need_accomodation">వసతి అవసరం</string>
    <string name="rules_of_events">పోటీల నియమాలు </string>
    <string name="events">పోటీలు </string>
    <string name="registration">నమోదు</string>
    <string name="registered_events">నమోదైన పోటీలు</string>
    <string name="announcements">ప్రకటనలు</string>
    <string name="results">ఫలితాలు</string>
    <string name="home">హోమ్</string>
    <string name="school_name">పాఠశాల పేరు</string>
    <string name="general_rules">నియమాలు</string>
    <string name="logout">లాగ్అవుట్</string>
    <string name="about">సమాచారం</string>
    <string name="email">ఇమెయిల్</string>
    <string name="vvit_balotsav">వివిఐటి బాలోత్సవ్ </string>
    <string name="cancel">రద్దు</string>
    <string name="juniors">జూనియర్లు</string>
    <string name="seniors">సీనియర్లు</string>
    <string name="subjuniors">ఉప జూనియర్లు</string>
    <string name="team">జట్టు</string>
    <string name="edit">మార్పులు </string>
    <string name="event_not_reg">ఈవెంట్లకు నమోదు కాలేదు</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="chitralekanam">ప్రతి పాఠశాల తరుపున ఒక్కొక్క విభాగం నుండి ఐదుగురు (5)  విద్యార్థులకు ప్రవేశం\n డ్రాయింగ్ షీటు ఇవ్వబడును\n అట్ట, రంగులు, బ్రష్, పెన్సిల్ తెచుకోవలెను </string>
    <string name="ekapatrabhinayem">ప్రతి పాఠశాల తరుపున ఒక్కొక్క విభాగం నుండి ఇద్దరు (2) విద్యార్థులకు ప్రవేశం.సామజిక,చారిత్రక, పౌరాణిక పాత్రలు ధరించవచ్చు. క్యాసెట్లు, సీడీలు అనుమతించబడవు. సమయపాలన పాటించవలెను.</string>
    <string name="sastriyanrutyam">ప్రతి పాఠశాల తరుపున ఒక్కొక్క విభాగం నుండి ఒక విద్యార్థికి ప్రవేశం. ఆర్కెస్ట్రా / సిడి / పెన్ డ్రైవ్  తెచ్చుకోవాలి </string>
    <string name="samprathayaveshadarana">ప్రతి పాఠశాల నుండి ఒక విద్యార్థికి ప్రవేశం, భారతదేశంలో ఏదేని ప్రాంతానికి చెందిన సంప్రదాయ  వస్త్రధారణ ప్రతిబింబించేలా ఉండాలి.</string>
    <string name="telugulonematladudham">ప్రతి పాఠశాల తరుపున ఒక్కొక్క విభాగం నుండి ఇద్దరు (2) విద్యార్థులకు ప్రవేశం, ఇచ్చిన అంశాన్ని గురించి ఇతర భాషా పదాలు వాడకుండా పూర్తిగా తెలుగులోనే మాట్లాడాలి.</string>
    <string name="sastriyasangeetam">ప్రతి పాఠశాల తరుపున ఒక్కొక్క విభాగం నుండి ఇద్దరు (2) విద్యార్థులకు ప్రవేశం, సమయపాలన పాటించవలెను.</string>
    <string name="generalquiz">ప్రతి పాఠశాల నుండి ఒక టీమ్ కు ప్రవేశం, ఒక టీమ్ కు ముగ్గురు (3) విద్యార్థులు. ప్రిలిమినరీ  రౌండ్ వ్రాత పరీక్ష ద్వారా నిర్వహించబడును. అర్హత పొందిన టీమ్ లకు క్వార్టర్ ఫైనల్స్, సెమీ ఫైనల్స్, ఫైనల్స్, పోటీ ఓరల్ పద్దతి ద్వారా పోటీ నిర్వహించబడును.   </string>
    <string name="digitalchitralekhanam">ప్రతి పాఠశాల తరుపున ఒక్కొక్క విభాగం నుండి ముగ్గురు (3) విద్యార్థులకు ప్రవేశం, ఎమ్.ఎస్. పెయింట్ సాఫ్ట్ వేర్ ను ఉపయోగించి కంప్యూటరు చిత్రలేఖనం ద్వారా చిత్రం గీయాలి.</string>
    <string name="telugupadhyam">ప్రతి పాఠశాల తరుపున ఒక్కొక్క విభాగం నుండి ఇద్దరు (2) విద్యార్థులకు ప్రవేశం, సబ్ జూని।।  విభాగముల ఏదేని ఒక శతక పద్యం చెప్పి భావం వివరించాలి. జూని।। సీని।। విభాగంలో పోతనామాత్యుల భాగవతం నుండి ఏదేని ఒక వృత్త పద్యం చెప్పి భావం వివరించాలి.</string>
    <string name="sinigeethalu">ప్రతి పాఠశాల తరుపున ఒక్కొక్క విభాగం నుండి ఇద్దరు (2) విద్యార్థులకు ప్రవేశం,  అశ్లిలం, అసభ్యం  కాని పాటలు మాత్రమే ఎంచుకోవలెను. ఆర్కెస్ట్రా ఉండరాదు.ఫైనల్స్ కు ఎంపికైన విద్యార్థులు నిర్వాహకులు అందించిన ఆర్కెస్ట్రాలు ఉపయోగించి ప్రదర్శన ఇవ్వవలెను.</string>
    <string name="mukhabinayem">ప్రతి పాఠశాల తరుపున ఒక్కొక్క విభాగం నుండి ఇద్దరు (2) విద్యార్థులకు ప్రవేశం, సమయపాలన పాటించవలెను, సంభాషణలు ఉండరాదు.</string>
    <string name="vaktrutvam">ప్రతి పాఠశాల తరుపున ఒక్కొక్క విభాగం నుండి ఇద్దరు (2) విద్యార్థులకు ప్రవేశం, ఒక గంట ముందు అంశం ఇవ్వబడును.</string>
    <string name="samskruthaslokam">ప్రతి పాఠశాల తరుపున ఇద్దరు (2) విద్యార్థులకు ప్రవేశం, హితోపదేశ, ఇతిహాసాది, కావ్యాలలోనివి కాని, సుభాషితాలు లోనివి కాని ఒక సంస్కృత శ్లోకం చెప్పి భావం తెలుగులో లేదా సంస్కృతం లో వివరించాలి.</string>
    <string name="janapadhanruthyam">ప్రతి పాఠశాల తరుపున ఒక్కొక్క విభాగం నుండి ఒక విద్యార్థికి ప్రవేశం, ఆర్కెస్ట్రా / సిడి / పెన్ డ్రైవ్ తెచుకోవలెను. అశ్లిలం, అసభ్యం  కాని పాటలు మాత్రమే ఎంచుకోవలెను. వైవిధ్యమైన పాటలు, క్రొత్త బాణీలకు ప్రాధాన్యత ఇవ్వబడును, సమయపాలన పాటించవలెను.</string>
    <string name="kavitharachana">ప్రతి పాఠశాల తరుపున ఒక్కొక్క విభాగం నుండి ఇద్దరు  (2) విద్యార్థులకు ప్రవేశం,తెల్ల కాగితం, అట్ట, కలము తెచ్చుకోవాలి,విడివిడిగా ప్రకటించిన అంశాల పై ఇరవై పంక్తులు మించకుండా కవిత వ్రాయాలి.</string>
    <string name="natikalu">ప్రతి పాఠశాల నుండి ఒక నాటికకు ప్రవేశం, పది (10) మందికి మించరాదు, మేకప్ సామాగ్రి తెచ్చుకోవాలి. సామజిక ఇతివృత్తాలకు ప్రాధాన్యత ఇవ్వబడును. సమయపాలన పాటించవలెను.  </string>
    <string name="vadhyasangeetam">ప్రతి పాఠశాల తరుపున ఒక్కొక్క విభాగం నుండి ఇద్దరు  (2) విద్యార్థులకు ప్రవేశం, రాగ ప్రధానంగా గల వీణ, వయోలిన్, ఫ్లూట్, గిటార్ మొదలగునవి ఇన్ స్ట్రుమెంట్స్  తెచ్చుకోవాలి.</string>
    <string name="kadharachana">ప్రతి పాఠశాల తరుపున ఒక్కొక్క విభాగం నుండి ఇద్దరు  (2) విద్యార్థులకు ప్రవేశం, తెల్ల కాగితం, అట్ట, కలము తెచ్చుకోవాలి,విడివిడిగా ప్రకటించిన అంశాల పై కథ వ్రాయాలి.</string>
    <string name="speelbee">ప్రతి పాఠశాల నుండి ఇద్దరు (2) విద్యార్థులకు ప్రవేశం, వ్రాత మరియు మౌఖిక పరీక్షలు ఉంటాయి. ముందుగా అందచేసిన పదాలలో 50 శాతం మరియు ఇతర పదాలలో 50 శాతంతో కూడిన ప్రిలిమినరీ పరీక్ష ఉంటుంది. ఫైనల్ కు ఎంపికైన విద్యార్థులకు పూర్తిగా నూతన పదాలతో పోటీ నిర్వహించబడును.</string>
    <string name="mattilobommaluchedham">ప్రతి పాఠశాల నుండి ఇద్దరు (2) విద్యార్థులకు ప్రవేశం, ఒండ్రు మట్టి,నీరు అందచేయబడును. నిర్వాహకులు ప్రకటించిన అంశాన్ని ప్రతిబింబించే విధంగా మట్టితో బొమ్మలు చేయాలి.</string>
    <string name="lekharachana">ప్రతి పాఠశాల తరుపున ఒక్కొక్క విభాగం నుండి ఇద్దరు  (2) విద్యార్థులకు ప్రవేశం, ఇన్ ల్యాండ్ లెటర్, అట్ట, కలము తెచ్చుకోవాలి,విడివిడిగా ప్రకటించిన అంశాల పై ఉత్తరం వ్రాయాలి.</string>
    <string name="kadhavisleshana">ప్రతి పాఠశాల తరుపున ఒక్కొక్క విభాగం నుండి ఇద్దరు  (2) విద్యార్థులకు ప్రవేశం, తెల్ల కాగితం, అట్ట, కలము తెచ్చుకోవాలి, నిర్వాహకులు అందచేసిన కథను చదివి వారి భావాలను విశ్లేషనాత్మకంగా వ్రాయాలి.</string>
    <string name="vadhyasangeetham">ప్రతి పాఠశాల తరుపున ఒక్కొక్క విభాగం నుండి ఇద్దరు  (2) విద్యార్థులకు ప్రవేశం, తాళ ప్రధానంగా గల తబలా, మృదంగం, ధోలక్ మొదలగునవి ఇన్ స్ట్రుమెంట్ తెచ్చుకోవాలి.</string>
    <string name="laghuchitravisleshana">ప్రతి పాఠశాల తరుపున ఒక్కొక్క విభాగం నుండి ఇద్దరు  (2) విద్యార్థులకు ప్రవేశం, తెల్ల కాగితం, అట్ట, కలము తెచ్చుకోవాలి, ప్రదర్శించిన లఘు చిత్రం పై వారి భావాలను విశ్లేషనాత్మకంగా వ్రాయాలి.</string>
    <string name="janapadhanrutyam">ప్రతి పాఠశాల నుండి ఒక బృందానికి  ప్రవేశం. బృంద సభ్యులు పది (10) మందికి మించరాదు. ఆర్కెస్ట్రా / సిడి / పెన్ డ్రైవ్ తెచుకోవలెను. అశ్లిలం, అసభ్యం  కాని పాటలు మాత్రమే ఎంచుకోవలెను.</string>
    <string name="vichitraveshadarana">ప్రతి పాఠశాల నుండి ఒక విద్యార్థికి ప్రవేశం. అసభ్యం మరియు అశ్లిలంగా లేని వేషధారణ చేయవలెను.</string>
    <string name="vichitraveshadarana_withsettings">ప్రతి పాఠశాల నుండి ఒక విద్యార్థికి ప్రవేశం. అసభ్యం మరియు అశ్లిలంగా లేని వేషధారణ చేయవలెను. సెట్టింగ్స్  కు కావలసిన సామాగ్రిని తెచుకొనవలెను.</string>


</resources>
