<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/clg"
    android:orientation="vertical"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="2.5dp"
        android:background="#FFFFFF"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="187dp"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            android:src="@drawable/logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_margin="5dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_school_black_24dp" />

            <EditText
                android:layout_width="320dp"
                android:layout_height="50dp"
                android:hint="@string/School_code"
                android:singleLine="true"
                android:id="@+id/et1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_margin="5dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_lock_outline_black_24dp" />

            <EditText
                android:layout_width="320dp"
                android:layout_height="50dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:id="@+id/et2"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="#ff6f41"
                android:onClick="clcikToDashBoard"
                android:text="@string/login"
                android:textColor="#ffffff"
                android:textSize="25sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:gravity="center"
                android:onClick="clickToRegister"
                android:text="@string/new_user_register_here"
                android:textSize="18sp"
                android:textStyle="normal" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>