<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.25"
            android:weightSum="1"
            >


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:orientation="vertical"
                android:background="@drawable/design"
                android:weightSum="1"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp">

                <ImageView
                    android:id="@+id/e_register"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.8"
                    android:layout_marginTop="5dp"
                    android:src="@mipmap/ic_registration" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.2"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:background="@color/colorPrimary"
                    android:text="@string/registration"
                    android:textColor="#ffffff" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:orientation="vertical"
                android:background="@drawable/design"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:weightSum="1">

                <ImageView
                    android:id="@+id/e_Registered"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.8"
                    android:layout_marginTop="5dp"
                    android:src="@mipmap/ic_registredevents" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.2"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:background="@color/colorPrimary"
                    android:text="@string/registered_events"
                    android:textColor="#ffffff" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.25"
            android:weightSum="1">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:background="@drawable/design"
                android:orientation="vertical"
                android:weightSum="1"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp">

                <ImageView
                    android:id="@+id/announce"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.8"
                    android:layout_marginTop="5dp"
                    android:textSize="18sp"
                    android:src="@mipmap/ic_announcements" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.2"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:background="@color/colorPrimary"
                    android:text="@string/announcements"
                    android:textColor="#ffffff" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:orientation="vertical"
                android:background="@drawable/design"
                android:weightSum="1"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp">

                <ImageView
                    android:id="@+id/results"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.8"
                    android:layout_marginTop="5dp"
                    android:src="@mipmap/ic_results" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.2"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:background="@color/colorPrimary"
                    android:text="@string/results"
                    android:textColor="#ffffff"
                    />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5">
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/design"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:gravity="center"
                        android:background="@color/colorPrimary"
                        android:text="@string/photo_gallery"
                        android:textColor="#ffffff"
                        android:textSize="15sp" />

                    <com.daimajia.slider.library.SliderLayout
                        android:id="@+id/slider"
                        android:layout_width="fill_parent"
                        android:layout_height="match_parent" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>